move processing to class

--- a/RunbeckProcessFile.csproj
+++ b/RunbeckProcessFile.csproj
@@ -47,7 +47,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -61,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileProcessor.cs" />
     <Compile Include="ProcessFile.cs">
       <SubType>Form</SubType>
     </Compile>
